--- a/Requirements.txt
+++ b/Requirements.txt
@@ -55,6 +55,7 @@ pycparser==2.20
 pydeck==0.7.0
 Pygments==2.10.0
 pymongo==3.12.1
+pymongo[tls,srv]
 pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
